--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -67,8 +67,9 @@
    "outputs": [],
    "source": [
     "# reflect an existing database into a new model\n",
-    "\n",
-    "# reflect the tables"
+    "base = automap_base()\n",
+    "# reflect the tables\n",
+    "base.prepare(engine, reflect = True)"
    ]
   },
   {
@@ -77,7 +78,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We can view all of the classes that automap found\n"
+    "# We can view all of the classes that automap found\n",
+    "base.classes.keys()"
    ]
   },
   {
@@ -86,7 +88,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save references to each table\n"
+    "# Save references to each table\n",
+    "Station = base.classes.station\n",
+    "Measurement = base.classes.measurement"
    ]
   },
   {
@@ -95,7 +99,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create our session (link) from Python to the DB\n"
+    "# Create our session (link) from Python to the DB\n",
+    "session = Session(engine)"
    ]
   },
   {
@@ -112,16 +117,24 @@
    "outputs": [],
    "source": [
     "# Design a query to retrieve the last 12 months of precipitation data and plot the results\n",
-    "\n",
+    "precipitation_data = session.query(Measurement.date, Measurement.prcp).filter(Measurement.date >= \"2016-08-23\")\n",
     "# Calculate the date 1 year ago from the last data point in the database\n",
-    "\n",
     "# Perform a query to retrieve the data and precipitation scores\n",
+    "precipitation_data = session.query(Measurement.date, Measurement.prcp).filter(Measurement.date >= '2016-08-23').\\\n",
+    "    filter(Measurement.date <= '2017-08-23').all()\n",
+    "precipitation_df = pd.DataFrame(precipitation_data).set_index('date')\n",
+    "precipitation_df = precipitation_df.sort_values(by='date').dropna()\n",
+    "precipitation_df.head()\n",
+    "\n",
     "\n",
     "# Save the query results as a Pandas DataFrame and set the index to the date column\n",
-    "\n",
+    "precipitation_df = pd.DataFrame(precipitation_data).set_index('date')\n",
     "# Sort the dataframe by date\n",
-    "\n",
-    "# Use Pandas Plotting with Matplotlib to plot the data\n"
+    "precipitation_df = precipitation_df.sort_values(by='date').dropna()\n",
+    "# Use Pandas Plotting with Matplotlib to plot the data\n",
+    "precipitation_df.plot(rot=45)\n",
+    "plt.show()\n",
+    "plt.savefig('Precipitation Analysis')\n"
    ]
   },
   {
@@ -130,7 +143,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use Pandas to calcualte the summary statistics for the precipitation data"
+    "# Use Pandas to calcualte the summary statistics for the precipitation data\n",
+    "precipitation_df.describe()"
    ]
   },
   {
@@ -139,7 +153,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Design a query to show how many stations are available in this dataset?\n"
+    "# Design a query to show how many stations are available in this dataset?\n",
+    "session.query(Station.id).count()"
    ]
   },
   {
@@ -149,7 +164,11 @@
    "outputs": [],
    "source": [
     "# What are the most active stations? (i.e. what stations have the most rows)?\n",
-    "# List the stations and the counts in descending order.\n"
+    "# List the stations and the counts in descending order.\n",
+    "active_stations = session.query(Measurement.station, func.count(Measurement.station)).\\\n",
+    "    group_by(Measurement.station).\\\n",
+    "    order_by(func.count(Measurement.station).desc()).all()\n",
+    "active_stations"
    ]
   },
   {
@@ -159,7 +178,12 @@
    "outputs": [],
    "source": [
     "# Using the station id from the previous query, calculate the lowest temperature recorded, \n",
-    "# highest temperature recorded, and average temperature of the most active station?\n"
+    "# highest temperature recorded, and average temperature of the most active station?\n",
+    "session.query(Measurement.station,\n",
+    "    func.min(Measurement.tobs),\n",
+    "    func.max(Measurement.tobs),\n",
+    "    func.avg(Measurement.tobs)).\\\n",
+    "filter(Measurement.station == 'USC00519281').all()"
    ]
   },
   {
@@ -169,7 +193,14 @@
    "outputs": [],
    "source": [
     "# Choose the station with the highest number of temperature observations.\n",
-    "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n"
+    "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n",
+    "station_USC00519281 = session.query(Measurement.date, Measurement.tobs).\\\n",
+    "    filter(Measurement.station == 'USC00519281').\\\n",
+    "    filter(Measurement.date >= '2016-08-23').\\\n",
+    "    filter(Measurement.date <= '2017-08-23').all()\n",
+    "station_USC00519281_df = pd.DataFrame(station_USC00519281)\n",
+    "station_USC00519281_df.plot(kind='hist', bins=12)\n",
+    "plt.savefig('Temp Observation Data')\n"
    ]
   },
   {
@@ -320,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.3-final"
   },
   "nteract": {
    "version": "0.12.3"
